# CC-Metrics

./: README.md  pyproject.toml
CCMetrics/: CC_base.py  CC_base_gpu.py  __init__.py  space_separation.py  space_separation_on_gpu.py
tests/: test_metrics.py
